see you in css hell

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,15 @@
   <head>
     <title>I offer no condolences to you using this</title>
     <link rel="stylesheet" type="text/css" href="/css/vendor/spectrum/spectrum.css">
+    <link rel="stylesheet" type="text/css" href="/css/override.css">
+    
   </head>
   <body>
-    <p>Choose a colour!</p>
+    <div id="container">
+      <p>Choose a colour!</p>
 
-    <input type="text" id="picker" />
+      <input type="text" id="picker" />
+    </div>
 
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="/js/vendor/spectrum/spectrum.js"></script>
