use hex in front of colours

--- a/public/index.html
+++ b/public/index.html
@@ -20,14 +20,14 @@
     <script type="text/javascript" src="skateboard.min.js"></script> 
     <script>
       var colours = {
-        red: 'FF0000',
-        green: '00FF00',
-        blue: '0000FF',
-        purple: '8D00AD',
-        orange: 'FF2000',
-        pink: 'FF20B0',
-        on: 'FFFFFF',
-        off: '000000'
+        red: '#FF0000',
+        green: '#00FF00',
+        blue: '#0000FF',
+        purple: '#8D00AD',
+        orange: '#FF2000',
+        pink: '#FF20B0',
+        on: '#FFFFFF',
+        off: '#000000'
       };
 
       var buttons = document.querySelectorAll('button');
